// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExtensionsPicker /> renders the ExtensionsPicker correctly 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="title"
      >
        <h3>
          Extensions
        </h3>
      </div>
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value=""
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="result-container"
    >
      <div
        class="quarkus-blurb"
      >
        <div
          class="blurb-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 192 512"
            width="1em"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              transform=""
            />
          </svg>
        </div>
        <div
          class="blurb-content"
        >
          <p>
            This page will help you bootstrap your Quarkus application and discover its extensions ecosystem.
          </p>
          <br />
          <p>
            Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively.
          </p>
          <br />
          <p>
            Explore the wide breath of technologies Quarkus applications and generate your project!
          </p>
        </div>
        <div
          class="blurb-close-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 64 731 1024"
            width="1em"
          >
            <path
              d="M96.464 804.571c-4.816-0.064-9.12-1.963-12.912-5.733l-77.815-77.815c-3.769-3.794-5.669-8.096-5.735-12.91-0.032-4.839 1.815-9.113 5.543-12.823l616.603-616.606c3.71-3.714 7.986-5.577 12.823-5.541 4.834 0.039 9.138 1.957 12.91 5.73l77.817 77.819c3.769 3.769 5.691 8.066 5.73 12.912 0.037 4.839-1.829 9.106-5.538 12.825l-616.606 616.599c-3.717 3.73-7.986 5.575-12.821 5.541zM622.144 799.031l-616.603-616.601c-3.726-3.717-5.577-7.989-5.536-12.827 0.059-4.843 1.959-9.143 5.728-12.914l77.817-77.817c3.792-3.774 8.096-5.691 12.91-5.728 4.837-0.039 9.106 1.824 12.821 5.536l616.599 616.608c3.717 3.712 5.579 7.989 5.543 12.823-0.041 4.814-1.959 9.118-5.728 12.91l-77.824 77.808c-3.767 3.778-8.073 5.678-12.907 5.744-4.834 0.034-9.104-1.815-12.818-5.541z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </div>
      </div>
      <div
        class="list-container"
      >
        <div
          style="display: contents;"
        >
          <div
            class="extension-category"
          >
            Core
          </div>
          <div
            aria-label="Switch io.quarkus:quarkus-arc extension"
            class="  extension-item"
          >
            <div
              class="extension-selector"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  transform=""
                />
              </svg>
            </div>
            <div
              class="extension-name"
              tabindex="0"
            >
              ArC
            </div>
            <div
              class="extension-details"
            >
              <div
                class="extension-description"
                tabindex="0"
              >
                Build time CDI dependency injection
              </div>
              <div
                class="extension-gav"
                tabindex="0"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 384 512"
                    width="1em"
                  >
                    <path
                      d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                      transform=""
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="display: contents;"
        >
          <div
            class="extension-category"
          >
            Cloud
          </div>
          <div
            aria-label="Switch some-id extension"
            class="  extension-item"
          >
            <div
              class="extension-selector"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  transform=""
                />
              </svg>
            </div>
            <div
              class="extension-name"
              tabindex="0"
            >
              A CDI in name test
            </div>
            <div
              class="extension-details"
            >
              <div
                class="extension-description"
                tabindex="0"
              >
                Some description
              </div>
              <div
                class="extension-gav"
                tabindex="0"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 384 512"
                    width="1em"
                  >
                    <path
                      d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                      transform=""
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="display: contents;"
        >
          <div
            class="extension-category"
          >
            Integration
          </div>
          <div
            aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
            class="  extension-item"
          >
            <div
              class="extension-selector"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                  transform=""
                />
              </svg>
            </div>
            <div
              class="extension-name"
              tabindex="0"
            >
              Camel Netty4 test HTTP
            </div>
            <div
              class="extension-details"
            >
              <div
                class="extension-description"
                tabindex="0"
              >
                Camel support for Netty
              </div>
              <div
                class="extension-gav"
                tabindex="0"
              >
                <div>
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 384 512"
                    width="1em"
                  >
                    <path
                      d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                      transform=""
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> select values and save 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="title"
      >
        <h3>
          Extensions
        </h3>
      </div>
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value="netty"
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="result-container"
    >
      <div
        class="quarkus-blurb"
      >
        <div
          class="blurb-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 192 512"
            width="1em"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              transform=""
            />
          </svg>
        </div>
        <div
          class="blurb-content"
        >
          <p>
            This page will help you bootstrap your Quarkus application and discover its extensions ecosystem.
          </p>
          <br />
          <p>
            Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively.
          </p>
          <br />
          <p>
            Explore the wide breath of technologies Quarkus applications and generate your project!
          </p>
        </div>
        <div
          class="blurb-close-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 64 731 1024"
            width="1em"
          >
            <path
              d="M96.464 804.571c-4.816-0.064-9.12-1.963-12.912-5.733l-77.815-77.815c-3.769-3.794-5.669-8.096-5.735-12.91-0.032-4.839 1.815-9.113 5.543-12.823l616.603-616.606c3.71-3.714 7.986-5.577 12.823-5.541 4.834 0.039 9.138 1.957 12.91 5.73l77.817 77.819c3.769 3.769 5.691 8.066 5.73 12.912 0.037 4.839-1.829 9.106-5.538 12.825l-616.606 616.599c-3.717 3.73-7.986 5.575-12.821 5.541zM622.144 799.031l-616.603-616.601c-3.726-3.717-5.577-7.989-5.536-12.827 0.059-4.843 1.959-9.143 5.728-12.914l77.817-77.817c3.792-3.774 8.096-5.691 12.91-5.728 4.837-0.039 9.106 1.824 12.821 5.536l616.599 616.608c3.717 3.712 5.579 7.989 5.543 12.823-0.041 4.814-1.959 9.118-5.728 12.91l-77.824 77.808c-3.767 3.778-8.073 5.678-12.907 5.744-4.834 0.034-9.104-1.815-12.818-5.541z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </div>
      </div>
      <div
        class="extension-search-clear"
      >
        Search results (
        <button
          class="pf-c-button pf-m-link"
          type="button"
        >
          Clear search
        </button>
        )
      </div>
      <div
        class="list-container"
      >
        <div
          aria-label="Switch io.quarkus:quarkus-camel-netty4-http extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            Camel Netty4 test HTTP
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Camel support for Netty
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<ExtensionsPicker /> show results for valid search 1`] = `
<DocumentFragment>
  <div
    class="extensions-picker"
  >
    <div
      class="control-container"
    >
      <div
        class="title"
      >
        <h3>
          Extensions
        </h3>
      </div>
      <div
        class="pf-c-form__group"
        tabindex="0"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            transform=""
          />
        </svg>
        <input
          aria-invalid="false"
          aria-label="Search extensions"
          class="pf-c-form-control search-extensions-input"
          placeholder=""
          type="text"
          value="CDI"
        />
      </div>
      <div
        class="selected-extensions"
      >
        <h4>
          Selected Extensions
        </h4>
        <div
          class="extension-list"
        />
      </div>
    </div>
    <div
      class="result-container"
    >
      <div
        class="quarkus-blurb"
      >
        <div
          class="blurb-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 192 512"
            width="1em"
          >
            <path
              d="M20 424.229h20V279.771H20c-11.046 0-20-8.954-20-20V212c0-11.046 8.954-20 20-20h112c11.046 0 20 8.954 20 20v212.229h20c11.046 0 20 8.954 20 20V492c0 11.046-8.954 20-20 20H20c-11.046 0-20-8.954-20-20v-47.771c0-11.046 8.954-20 20-20zM96 0C56.235 0 24 32.235 24 72s32.235 72 72 72 72-32.235 72-72S135.764 0 96 0z"
              transform=""
            />
          </svg>
        </div>
        <div
          class="blurb-content"
        >
          <p>
            This page will help you bootstrap your Quarkus application and discover its extensions ecosystem.
          </p>
          <br />
          <p>
            Think of Quarkus extensions as your project dependencies. Extensions configure, boot and integrate a framework or technology into your Quarkus application. They also do all of the heavy lifting of providing the right information to GraalVM for your application to compile natively.
          </p>
          <br />
          <p>
            Explore the wide breath of technologies Quarkus applications and generate your project!
          </p>
        </div>
        <div
          class="blurb-close-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 64 731 1024"
            width="1em"
          >
            <path
              d="M96.464 804.571c-4.816-0.064-9.12-1.963-12.912-5.733l-77.815-77.815c-3.769-3.794-5.669-8.096-5.735-12.91-0.032-4.839 1.815-9.113 5.543-12.823l616.603-616.606c3.71-3.714 7.986-5.577 12.823-5.541 4.834 0.039 9.138 1.957 12.91 5.73l77.817 77.819c3.769 3.769 5.691 8.066 5.73 12.912 0.037 4.839-1.829 9.106-5.538 12.825l-616.606 616.599c-3.717 3.73-7.986 5.575-12.821 5.541zM622.144 799.031l-616.603-616.601c-3.726-3.717-5.577-7.989-5.536-12.827 0.059-4.843 1.959-9.143 5.728-12.914l77.817-77.817c3.792-3.774 8.096-5.691 12.91-5.728 4.837-0.039 9.106 1.824 12.821 5.536l616.599 616.608c3.717 3.712 5.579 7.989 5.543 12.823-0.041 4.814-1.959 9.118-5.728 12.91l-77.824 77.808c-3.767 3.778-8.073 5.678-12.907 5.744-4.834 0.034-9.104-1.815-12.818-5.541z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </div>
      </div>
      <div
        class="extension-search-clear"
      >
        Search results (
        <button
          class="pf-c-button pf-m-link"
          type="button"
        >
          Clear search
        </button>
        )
      </div>
      <div
        class="list-container"
      >
        <div
          aria-label="Switch io.quarkus:quarkus-arc extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            ArC
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Build time CDI dependency injection
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="Switch some-id extension"
          class="  extension-item"
        >
          <div
            class="extension-selector"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zm-6 400H54c-3.3 0-6-2.7-6-6V86c0-3.3 2.7-6 6-6h340c3.3 0 6 2.7 6 6v340c0 3.3-2.7 6-6 6z"
                transform=""
              />
            </svg>
          </div>
          <div
            class="extension-name"
            tabindex="0"
          >
            A CDI in name test
          </div>
          <div
            class="extension-details"
          >
            <div
              class="extension-description"
              tabindex="0"
            >
              Some description
            </div>
            <div
              class="extension-gav"
              tabindex="0"
            >
              <div>
                <svg
                  aria-hidden="true"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 384 512"
                  width="1em"
                >
                  <path
                    d="M384 112v352c0 26.51-21.49 48-48 48H48c-26.51 0-48-21.49-48-48V112c0-26.51 21.49-48 48-48h80c0-35.29 28.71-64 64-64s64 28.71 64 64h80c26.51 0 48 21.49 48 48zM192 40c-13.255 0-24 10.745-24 24s10.745 24 24 24 24-10.745 24-24-10.745-24-24-24m96 114v-20a6 6 0 0 0-6-6H102a6 6 0 0 0-6 6v20a6 6 0 0 0 6 6h180a6 6 0 0 0 6-6z"
                    transform=""
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
